--- a/templates/product/new.html.twig
+++ b/templates/product/new.html.twig
@@ -51,6 +51,9 @@
     <div>
         {{ form_row(form.quantite, {'label': 'quantite'}) }}
     </div>
+        <div>
+        {{ form_row(form.image, {'label': 'image'}) }}
+    </div>
     <button type="submit">Create</button>
     {{ form_end(form) }}
 {% endblock %}
